...
                message: isRunning(widget.item, widget.running)
                    ? 'openterminal-text'.i18n()
                    : 'start-text'.i18n(),
                child: MouseRegion(
                  cursor: SystemMouseCursors.click,
                  child: IconButton(
                    key: const ValueKey('test-listitem-start'),
                    icon: busyAction == 'start' ||
                            (busyAction == 'console' &&
                                isRunning(widget.item, widget.running))
                        ? const SizedBox.square(
                            dimension: 16.0,
                            child: ProgressRing(strokeWidth: 2.0))
...
                      : 'vmopenconsole-text'.i18n(),
                  child: MouseRegion(
                    cursor: SystemMouseCursors.click,
                    child: IconButton(
                      key: ValueKey(isRunning(widget.item, widget.running)
                          ? 'test-listitem-screen'
                          : 'test-listitem-console'),
                      icon: busyAction == 'console' &&
                              !isRunning(widget.item, widget.running)
                          ? const SizedBox.square(
                              dimension: 16.0,
                              child: ProgressRing(strokeWidth: 2.0))
                          : Icon(
...
